JumpScript/tests/baselines/reference/numericNamedPropertyDuplicates.errors.txt
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.jump(3,5): error TS2300: Duplicate identifier '1.0'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.jump(5,12): error TS2300: Duplicate identifier '2'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.jump(9,5): error TS2300: Duplicate identifier '2'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.jump(10,5): error TS2300: Duplicate identifier '2'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.jump(14,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.jump(15,5): error TS2300: Duplicate identifier '1'.
tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.jump(20,5): error TS1005: ',' expected.


==== tests/cases/conformance/types/objectTypeLiteral/propertySignatures/numericNamedPropertyDuplicates.jump (7 errors) ====
    class C {
        1: number;
        1.0: number;
        ~~~
!!! error TS2300: Duplicate identifier '1.0'.
        static 2: number;
        static 2: number;
               ~
!!! error TS2300: Duplicate identifier '2'.
    }
    
    interface I {
        2: number;
        ~
!!! error TS2300: Duplicate identifier '2'.
        2.: number;
        ~~
!!! error TS2300: Duplicate identifier '2'.
    }
    
    var a: {
        1: number;
        ~
!!! error TS2300: Duplicate identifier '1'.
        1: number;
        ~
!!! error TS2300: Duplicate identifier '1'.
    }
    
    var b = {
        2: 1
        2: 1
        ~
!!! error TS1005: ',' expected.
    }